# handmade-hero-follow-along

./: .clang-format  CMakeLists.txt  README.md  build.bat
misc/: shell.bat
src/: win32_handmade.cpp
